chore: update kubb
